examples/expected/check_invalid_safe_hate_speech.txt
error[E3002]: cannot prove constraint 'hate_speech' at compile time
  --> examples/invalid_safe_hate_speech.tp:2:38
   |
 2 | 	let x: Safe<string, !hate_speech> = "ok";
   |                                      ^
